all css files correct

--- a/views/nr.ejs
+++ b/views/nr.ejs
@@ -5,22 +5,21 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>Weather by SiD</title>
       <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
-      <link rel="stylesheet" href="/css/nr.css">
-      <link rel="stylesheet" href="normalize.css">
+      <link rel="stylesheet" href="/css/result.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 
    <body>
       <div class="main-wrapper">
          <div class="main-wrapper-mask"></div>
-         <div class="main-wrapper-blur" style="background-image: url(img/paris-lg.jpg)"></div>
+         <div class="main-wrapper-blur" style="background-image: url(/paris-lg.jpg)"></div>
          <div class="main-wrapper-front">
             <div class="full-center">
                <div class="widget-block">
                	<!-- MAIN AREA -->
                   <div class="img-area">
                      <div class="img-area-mask"></div>
-                     <img src="img/paris-sm.jpg" alt="">
+                     <img src="/paris-sm.jpg" alt="">
                      <div class="img-area-front">
                         <h5 class="location">Paris</h5>
                         <p class="today">Sunday, July 27, 18:00</p>
