--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,139 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="/index.css">
+
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-<style>
-html {
-   margin: 0px;
-   height: 100%;
-   width: 100%;
-}
-
-body {
-   margin: 0px;
-   min-height: 100%;
-   width: 100%;
-       -webkit-align-content: center;
-    align-content: center;
-}
-body {
-    background-image: url("weatherbg.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-}
-.heading {
-    color: white;
-    text-align: center;
-    margin: auto;
-    font-size: 20;
-    font-weight: bolder;    
-}
-.subheading{
-      color: white;
-    text-align: center;
-    margin: auto;
-    font-size: 16;
-    font-weight: bold;   
-}
-.formland{
-    width: 50%;
-    margin-top: 20%;
-    width: 50%;
-    text-align: center;
-    -webkit-align-content: center;
-    align-content: center;
-    
-    
-}
-
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-
-
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
-}
-
-#myInput {
-  border-box: box-sizing;
-  background-image: url('searchicon.png');
-  background-position: 14px 12px;
-  background-repeat: no-repeat;
-  font-size: 16px;
-  padding: 14px 20px 12px 45px;
-  border: none;
-  border-bottom: 1px solid #ddd;
-}
-
-#myInput:focus {outline: 3px solid #ddd;}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f6f6f6;
-    min-width: 230px;
-    border: 1px solid #ddd;
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.show {display:block;}
-
-
-
-</style><title>Page Title</title>
+<title>Page Title</title>
 </head>
 <body>
 <div class="formland">
 <h1 class="heading">check weather #betaversion</h1>
-    
+
 <p class="subheading">current weather.</p>
 <form action="/results" method="get">
   city name: <input type="text" name="city" placeholder="city name ..."><br>
   <input type="submit" value="Submit">
 </form>
-<!--
-drop down with search filter coming soon!!!!!
-:p
 
-<div class="dropdown">
-    <form action="/results" id="theform" method="get">
-
-  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-  <div id="myDropdown" class="dropdown-content">
-    <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-    <select name="cars">
-  <option onclick=clickfunc(value)     value="mumbai" >Volvo</option>
-  <option value="saab">Saab</option>
-  <option value="fiat">Fiat</option>
-  <option value="audi">Audi</option>
-</select>
-    <li onclick=clickfunc(value)     value="mumbai" >somthing is here </li>
-    <a href="#base">Base</a>
-    
-  </div>
-  </form>
-</div> -->
 </div>
 
 </body>
