workng searvh bar in reuslt spage

--- a/views/nr.ejs
+++ b/views/nr.ejs
@@ -13,15 +13,14 @@
       <div class="main-wrapper">
          <div class="main-wrapper-mask"></div>
          <div class="main-wrapper-blur" style="background-image: url(/paris-lg.jpg)"></div>
+         <div class="button_box2">
+           <form class="form-wrapper-2 cf" action="/results" method="get">
+             <input type="text" name="city" placeholder="city name here" required>
+             <button type="submit">Search</button>
+           </form>
+         </div>
          <div class="main-wrapper-front">
-           <div class="wrap">
-             <div class="search">
-               <input type="text" class="searchTerm" placeholder="What are you looking for?">
-               <button type="submit" class="searchButton">
-                 <i class="fa fa-search"></i>
-               </button>
-             </div>
-           </div>
+
             <div class="full-center">
                <div class="widget-block">
                	<!-- MAIN AREA -->
