--- a/public/css/result.css
+++ b/public/css/result.css
@@ -1,50 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
-.search {
-  width: 100%;
-  position: absolute;
-}
-
-.searchTerm {
-  float: left;
-  width: 100%;
-  border: 3px solid #00B4CC;
-  padding: 5px;
-  height: 20px;
-  border-radius: 5px;
-  outline: none;
-  color: #9DBFAF;
-}
-
-.searchTerm:focus{
-  color: #00B4CC;
-}
-
-.searchButton {
-  position: absolute;
-  right: -50px;
-  width: 40px;
-  height: 36px;
-  border: 1px solid #00B4CC;
-  background: #00B4CC;
-  text-align: center;
-  color: #fff;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 20px;
-}
-
-/*Resize the wrap to see the search bar change!*/
-.wrap{
-  width: 30%;
-  position: absolute;
-  top: 2%;
-justify-content: center;
- /* transform: translate(-50%, -50%); */
-  z-index: 5;
-}
-
-
 
 
 
@@ -567,7 +522,8 @@ body {
   backface-visibility: hidden;
 }
 .main-wrapper > .main-wrapper-front {
-  position: relative;
+  position: absolute;
+  top: 0;
   z-index: 6;
 }
 .full-center {
@@ -628,7 +584,7 @@ body {
   border-top: 3px solid #fc0203;
   float: left;
   width: 110px;
-  height: 150px;
+  height: 200px;
 }
 .week-forecast > li:first-child {
   border-bottom-left-radius: 5px;
@@ -827,7 +783,7 @@ body {
 .weather-params > li {
   overflow: hidden;
 }
-.weather-params > li .climacon {
+.weather-params > li .climaconrelative {
   display: block;
   font-size: 50px;
   float: left;
@@ -841,7 +797,7 @@ body {
   position: relative;
   top: 10px;
   font-weight: 300;
-}
+}relative
 .location,
 .today {
   position: absolute;
@@ -852,7 +808,7 @@ body {
   margin: 0;
   top: 15px;
   left: 0;
-}
+}relative
 .today {
   font-size: 14px;
   top: 50px;
@@ -868,8 +824,131 @@ body {
   display: inline-block;
   padding: 5px 10px;
   background: rgba(0,0,0,0.3);
-  -webkit-border-radius: 5px;
+  -webkit-border-radius: 5px;relative
   border-radius: 5px;
   font-size: 14px;
   font-weight: 300;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.button_box2 {
+margin:100px auto;
+}
+/*-------------------------------------*/
+.cf:before, .cf:after{
+content:"";
+display:table;
+}
+.cf:after{
+clear:both;
+}
+.cf{
+zoom:1;
+}
+/*-------------------------------------*/
+
+.form-wrapper-2 {
+  margin: 0px;
+  z-index: 9999;
+  position: absolute;
+  top: 0px;
+width: 330px;
+padding: 5px;
+background: #555;
+-moz-border-radius: 10px;
+-webkit-border-radius: 20px;
+border-radius: 30px;
+-moz-box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
+-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
+box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
+}
+.form-wrapper-2 input {
+width: 210px;
+color: black;
+height: 100%;
+padding: 10px 5px;
+float: left;
+font: bold 15px 'Raleway', sans-serif;
+border: 0;
+background: #eee;
+-moz-border-radius: 20px 0 0 20px;
+-webkit-border-radius: 3px 0 0 3px;
+border-radius: 20px 0 0 20px;
+}
+.form-wrapper-2 input:focus {
+outline: 0;
+background: #fff;
+-moz-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+-webkit-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+}
+.form-wrapper-2 input::-webkit-input-placeholder {
+color: #999;
+font-weight: normal;
+font-style: italic;
+}
+.form-wrapper-2 input:-moz-placeholder {
+color: #999;
+font-weight: normal;
+font-style: italic;
+}
+.form-wrapper-2 input:-ms-input-placeholder {
+color: #999;
+font-weight: normal;
+font-style: italic;
+}
+.form-wrapper-2 button {
+overflow: visible;
+position: relative;
+float: right;
+border: 0;
+padding: 0;
+cursor: pointer;
+height: 40px;
+width: 110px;
+font: bold 15px/40px 'Raleway', sans-serif;
+color: #fff;
+text-transform: uppercase;
+background: #D88F3C;
+-moz-border-radius: 0 3px 3px 0;
+-webkit-border-radius: 0 3px 3px 0;
+border-radius: 0 20px 20px 0;
+text-shadow: 0 -1px 0 rgba(0, 0 ,0, .3);
+}
+.form-wrapper-2 button:hover{
+background: #FA8807;
+}
+.form-wrapper-2 button:active,
+.form-wrapper-2 button:focus{
+background: #c42f2f;
+}
+.form-wrapper-2 button:before {
+content: '';
+position: absolute;
+border-width: 8px 8px 8px 0;
+border-style: solid solid solid none;
+border-color: transparent #D88F3C transparent;
+top: 12px;
+left: -6px;
+}
+.form-wrapper-2 button:hover:before{
+border-right-color: #FA8807;
+}
+.form-wrapper-2 button:focus:before{
+border-right-color: #c42f2f;
+}
+.form-wrapper-2 button::-moz-focus-inner {
+border: 0;
+padding: 0;
 }
