--- a/public/index.css
+++ b/public/index.css
@@ -1,102 +1,109 @@
-html {
-   margin: 0px;
-   height: 100%;
-   width: 100%;
-}
-
 body {
-   margin: 0px;
-   min-height: 100%;
-   width: 100%;
-       -webkit-align-content: center;
-    align-content: center;
-}
-body {
-    background-image: url("weatherbg.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-}
-.heading {
-    color: white;
-    text-align: center;
-    margin: auto;
-    font-size: 20;
-    font-weight: bolder;    
-}
-.subheading{
-      color: white;
-    text-align: center;
-    margin: auto;
-    font-size: 16;
-    font-weight: bold;   
-}
-.formland{
-    width: 50%;
-    margin-top: 20%;
-    width: 50%;
-    text-align: center;
-    -webkit-align-content: center;
-    align-content: center;
-    
-    
-}
-
-/* Dropdown Button */
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
-}
-
-/* The search field */
-#myInput {
-  border-box: box-sizing;
-  background-image: url('searchicon.png');
-  background-position: 14px 12px;
+  margin: 0;
+  background-image: url("https://images.unsplash.com/photo-1468571452166-b089f160f1c4");
+  background-size: cover;
+  background-color: #000;
+  font-family: "Nunito Sans";
   background-repeat: no-repeat;
-  font-size: 16px;
-  padding: 14px 20px 12px 45px;
+}
+nav {
+  margin-top: 1em;
+  font-size: 0.85em;
+  padding: 1em;
+}
+ul, li {
+  display: inline;
+  margin: 0;
+}
+ul {
+ padding: 0 1.5em;
+}
+li {
+  color: white;
+  padding: 0.25em 1em;
+  cursor: pointer;
+}
+
+.avatar {
+  float:right;
+  color: white;
+  margin-left: 0.5em;
+}
+.avatar img {
+  max-width: 2.5em;
+  border-radius: 100%;
+  margin-top: -0.5em;
+}
+#arrow {
+  padding-top: 0.5em;
+  padding-left: 0.5em;
+  vertical-align: top;
+}
+#search {
+  border-left: 1px solid #fff;
+}
+#search li:hover{
+    background-color: #1e67ea;
+    border-radius: 1em;
+}
+#search-container{
+  min-height: 350px;
+}
+.search-bar {
+  padding-top: 5em;
+}
+#search-input {
+  margin-left: 3em;
+  padding-left: 0.5em;
+  font-size: 3em;
+  max-width: 50%;
+  color: #454545;
+  border: transparent;
+  border-radius: 2px;
+}
+#search-button{
+  background-color: #1e67ea;
+  color: #fff;
+  border-radius: 2px;
+  font-size: 3em;
   border: none;
-  border-bottom: 1px solid #ddd;
+  margin-left: -5px;
+  cursor: pointer;
 }
 
-/* The search field when it gets focus/clicked on */
-#myInput:focus {outline: 3px solid #ddd;}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
+#footer-nav {
+  font-size: 0.85em;
+  padding: 1em;
+  text-align: center;
 }
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f6f6f6;
-    min-width: 230px;
-    border: 1px solid #ddd;
-    z-index: 1;
+#footer-nav li:hover{
+    background-color: rgba(255,255,255,0.5);
+    border-radius: 1em;
 }
-
-/* Links inside the dropdown */
-.dropdown-content li {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+#help{
+  float: right;
+  color:black;
+  width: 1em;
+  line-height: 1em;
+  background-color: rgba(255,255,255,0.5);
+  border-radius: 100%;
+  padding: 0.25em;
+  cursor: pointer;
 }
-
-/* Change color of dropdown links on hover */
-.dropdown-content li:hover {background-color: #f1f1f1}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+#credit{
+  text-align: right;
+  display: inline-block;
+  float:right;
+  color: black;
+  background-color: #fff;
+  padding: 0.5em;
+  margin-top: -5em;
+  border-radius: 2px;
+}
+#img-credit{
+  font-size: 0.85em;
+  color: #454545;
+}
+.hidden {
+  visibility: hidden;
+}
