--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,58 +2,61 @@
 <html>
 <head>
   <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 <title>Page Title</title>
 </head>
 <body>
-<div class="formland">
-<h1 class="heading">check weather #betaversion</h1>
+  <nav>
+    <ul id="primary">
+      <li><i class="fa fa-th-large fa-lg"></i></li>
+      <li id="logo">
+        <i class="fa fa-search" ></i>
+        &nbsp;Ding
+      </li>
+    </ul>
+    <ul id="search">
+      <li>Web</li>
+      <li>Images</li>
+      <li>Videos</li>
+      <li>News</li>
+    </ul>
+    <div class="avatar">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/298470/profile/profile-80_2.jpg" alt="" />
+    <i id="arrow" class="fa fa-caret-down"></i>
+    </div>
+  </nav>
+  <section id="search-container">
+    <div class="search-bar">
+      <form class="" action="/results" method="get">
 
-<p class="subheading">current weather.</p>
-<form action="/results" method="get">
-  city name: <input type="text" name="city" placeholder="city name ..."><br>
-  <input type="submit" value="Submit">
-</form>
-
-</div>
+      <input type="text" name="city" placeholder="city name here" id="search-input"/>
+      <button id="search-button"><i class="fa fa-search"></i></button>
+    </form>
+    </div>
+  </section>
+  <footer>
+  <div id="footer-nav">
+    <ul>
+      <li>Privacy</li>
+      <li>Legal</li>
+      <li>Advertise</li>
+    </ul>
+  <p id="credit" class="hidden">Franz Josef Glacier, New Zealand<br><span id="img-credit">Esaias Tan/Unsplash</span></p>
+  <i class="fa fa-question" id="help"></i>
+  </div>
+  </footer>
 
 </body>
 <script >
-
-
-    function check(event)
-    {
-    var a = document.getElementsByTagName("select").value;
-    alert(a);
-    alert(event);
-    }
-
-function myFunction() {
-  document.getElementById("myDropdown").classList.toggle("show");
-}
-
-function filterFunction() {
-  var input, filter, ul, li, a, i;
-  input = document.getElementById("myInput");
-  filter = input.value.toUpperCase();
-  div = document.getElementById("myDropdown");
-  a = div.getElementsByTagName("a");
-  for (i = 0; i < a.length; i++) {
-    if (a[i].innerHTML.toUpperCase().indexOf(filter) > -1) {
-      a[i].style.display = "";
-    } else {
-      a[i].style.display = "none";
-    }
-  }
-}
-
-function clickfunc(value){
-    alert(value);
-    document.getElementById("theform").submit();
-    console.log("value");
-    console.log(value);
-}
+var help = $("#help");
+var credit = $("#credit");
+help.on("mouseenter", function(){
+  credit.toggleClass("hidden");
+});
+help.on("mouseleave", function(){
+  credit.toggleClass("hidden");
+});
 </script>
 
 </html>
