--- a/public/index.css
+++ b/public/index.css
@@ -39,71 +39,123 @@ li {
   padding-left: 0.5em;
   vertical-align: top;
 }
-#search {
-  border-left: 1px solid #fff;
+
+
+/* search ba of center  */
+
+
+.button_box2 {
+margin:100px auto;
 }
-#search li:hover{
-    background-color: #1e67ea;
-    border-radius: 1em;
+/*-------------------------------------*/
+.cf:before, .cf:after{
+content:"";
+display:table;
 }
-#search-container{
-  min-height: 350px;
+.cf:after{
+clear:both;
 }
-.search-bar {
-  padding-top: 5em;
+.cf{
+zoom:1;
 }
-#search-input {
-  margin-left: 3em;
-  padding-left: 0.5em;
-  font-size: 3em;
-  max-width: 50%;
-  color: #454545;
-  border: transparent;
-  border-radius: 2px;
+/*-------------------------------------*/
+
+.form-wrapper-2 {
+  margin: auto;
+  z-index: 9999;
+  position: absolute;
+  top: 45%;
+width: 330px;
+padding: 5px;
+background: #555;
+-moz-border-radius: 10px;
+-webkit-border-radius: 20px;
+border-radius: 30px;
+-moz-box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
+-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
+box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
 }
-#search-button{
-  background-color: #1e67ea;
-  color: #fff;
-  border-radius: 2px;
-  font-size: 3em;
-  border: none;
-  margin-left: -5px;
-  cursor: pointer;
+.form-wrapper-2 input {
+width: 210px;
+color: black;
+height: 100%;
+padding: 10px 5px;
+float: left;
+font: bold 15px 'Raleway', sans-serif;
+border: 0;
+background: #eee;
+-moz-border-radius: 20px 0 0 20px;
+-webkit-border-radius: 3px 0 0 3px;
+border-radius: 20px 0 0 20px;
+}
+.form-wrapper-2 input:focus {
+outline: 0;
+background: #fff;
+-moz-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+-webkit-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+}
+.form-wrapper-2 input::-webkit-input-placeholder {
+color: #999;
+font-weight: normal;
+font-style: italic;
+}
+.form-wrapper-2 input:-moz-placeholder {
+color: #999;
+font-weight: normal;
+font-style: italic;
+}
+.form-wrapper-2 input:-ms-input-placeholder {
+color: #999;
+font-weight: normal;
+font-style: italic;
+}
+.form-wrapper-2 button {
+overflow: visible;
+position: relative;
+float: right;
+border: 0;
+padding: 0;
+cursor: pointer;
+height: 40px;
+width: 110px;
+font: bold 15px/40px 'Raleway', sans-serif;
+color: #fff;
+text-transform: uppercase;
+background: #D88F3C;
+-moz-border-radius: 0 3px 3px 0;
+-webkit-border-radius: 0 3px 3px 0;
+border-radius: 0 20px 20px 0;
+text-shadow: 0 -1px 0 rgba(0, 0 ,0, .3);
+}
+.form-wrapper-2 button:hover{
+background: #FA8807;
+}
+.form-wrapper-2 button:active,
+.form-wrapper-2 button:focus{
+background: #c42f2f;
+}
+.form-wrapper-2 button:before {
+content: '';
+position: absolute;
+border-width: 8px 8px 8px 0;
+border-style: solid solid solid none;
+border-color: transparent #D88F3C transparent;
+top: 12px;
+left: -6px;
+}
+.form-wrapper-2 button:hover:before{
+border-right-color: #FA8807;
+}
+.form-wrapper-2 button:focus:before{
+border-right-color: #c42f2f;
+}
+.form-wrapper-2 button::-moz-focus-inner {
+border: 0;
+padding: 0;
 }
 
-#footer-nav {
-  font-size: 0.85em;
-  padding: 1em;
-  text-align: center;
-}
-#footer-nav li:hover{
-    background-color: rgba(255,255,255,0.5);
-    border-radius: 1em;
-}
-#help{
-  float: right;
-  color:black;
-  width: 1em;
-  line-height: 1em;
-  background-color: rgba(255,255,255,0.5);
-  border-radius: 100%;
-  padding: 0.25em;
-  cursor: pointer;
-}
-#credit{
-  text-align: right;
-  display: inline-block;
-  float:right;
-  color: black;
-  background-color: #fff;
-  padding: 0.5em;
-  margin-top: -5em;
-  border-radius: 2px;
-}
-#img-credit{
-  font-size: 0.85em;
-  color: #454545;
-}
+
 .hidden {
   visibility: hidden;
 }
