--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,6 @@
       <li><i class="fa fa-th-large fa-lg"></i></li>
       <li id="logo">
         <i class="fa fa-search" ></i>
-        &nbsp;Ding
       </li>
     </ul>
     <ul id="search">
@@ -23,29 +22,16 @@
     </ul>
     <div class="avatar">
       <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/298470/profile/profile-80_2.jpg" alt="" />
-    <i id="arrow" class="fa fa-caret-down"></i>
     </div>
   </nav>
-  <section id="search-container">
-    <div class="search-bar">
-      <form class="" action="/results" method="get">
 
-      <input type="text" name="city" placeholder="city name here" id="search-input"/>
-      <button id="search-button"><i class="fa fa-search"></i></button>
+  <div class="button_box2">
+    <form class="form-wrapper-2 cf" action="/results" method="get">
+      <input type="text" name="city" placeholder="city name here" required>
+      <button type="submit">Search</button>
     </form>
-    </div>
-  </section>
-  <footer>
-  <div id="footer-nav">
-    <ul>
-      <li>Privacy</li>
-      <li>Legal</li>
-      <li>Advertise</li>
-    </ul>
-  <p id="credit" class="hidden">Franz Josef Glacier, New Zealand<br><span id="img-credit">Esaias Tan/Unsplash</span></p>
-  <i class="fa fa-question" id="help"></i>
   </div>
-  </footer>
+
 
 
 </body>
