--- a/public/css/result.css
+++ b/public/css/result.css
@@ -845,9 +845,8 @@ h5 {
   margin-top: 0;
 }
 
-.iconsdetail {
-  position: relative;
-  width: 5px;
+#hehehe {
+  width: 15px;
   color: white;
   z-index: 9999
 
@@ -859,7 +858,7 @@ h5 {
   font-weight: bolder;
   color: rgba(250, 250, 250, 0.5);
   margin-left: 5%;
-  margin-top: 2%;
+  margin-top: 5%;
 
 }
 
@@ -886,22 +885,23 @@ zoom:1;
 /*-------------------------------------*/
 
 .form-wrapper-2 {
-  margin: 0px;
+  margin: 2px 30% 5px 30%;
   z-index: 9999;
   position: absolute;
   top: 0px;
-width: 330px;
+width: 40%;
 padding: 5px;
-background: #555;
+background-color: rgba(85,85,85,50%);
 -moz-border-radius: 10px;
 -webkit-border-radius: 20px;
 border-radius: 30px;
 -moz-box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
 -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
 box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
+justify-content: center;
 }
 .form-wrapper-2 input {
-width: 210px;
+width: 70%;
 color: black;
 height: 100%;
 padding: 10px 5px;
@@ -909,6 +909,7 @@ float: left;
 font: bold 15px 'Raleway', sans-serif;
 border: 0;
 background: #eee;
+opacity: 60%;
 -moz-border-radius: 20px 0 0 20px;
 -webkit-border-radius: 3px 0 0 3px;
 border-radius: 20px 0 0 20px;
@@ -942,8 +943,8 @@ float: right;
 border: 0;
 padding: 0;
 cursor: pointer;
-height: 40px;
-width: 110px;
+height: 100%;
+width: 30%;
 font: bold 15px/40px 'Raleway', sans-serif;
 color: #fff;
 text-transform: uppercase;
