--- a/views/nr.ejs
+++ b/views/nr.ejs
@@ -57,7 +57,7 @@
                   <!-- WEATHER FORECAST -->
                   <ul class="week-forecast">
                   <%  for(var i=0;i<14;i=i+2){  %>
-                     <li class="sun">
+                     <li class="cloud rain">
                         <div class="inner">
                            <h5 class="week-day">+<%= i*6 %> hours</h5>
                         <img class="weekicon" src="aicons/rainy-3.svg" alt="Smiley face">
